# apps/BE/openapi.json
@@ -49,6 +49,16 @@
         },
         "required": ["done"]
       },
+      "UpdateTodoTitle": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "minLength": 1
+          }
+        },
+        "required": ["title"]
+      },
       "TodoIdParams": {
         "type": "object",
         "properties": {
@@ -127,6 +137,47 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/SetTodoDone"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Updated todo",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Todo"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Todo not found"
+          }
+        }
+      }
+    },
+    "/todos/{id}/title": {
+      "patch": {
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "required": true,
+            "name": "id",
+            "in": "path"
+          }
+        ],
+        "requestBody": {
+          "description": "New todo title",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateTodoTitle"
               }
             }
           }
